[package]
name = "minigraf-wasm"
version = "1.1.1"
edition = "2024"
publish = false
description = "wasm-pack build shim for Minigraf browser and WASI targets"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
minigraf = { version = "=1.2.0", features = ["browser"] }

[features]
browser = ["minigraf/browser"]

[workspace]
members = ["."]
