[package]
name = "minigraf-wasm"
version = "1.1.1"
edition = "2024"
publish = false
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/project-minigraf/minigraf-wasm"
description = "wasm-pack build shim for Minigraf browser and WASI targets"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
minigraf = { version = "=1.2.0", features = ["browser"] }

[features]
browser = ["minigraf/browser"]

[workspace]
members = ["."]
